teste para fazer a requisição na api

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@vueuse/core": "^10.3.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
